[ls4] clean up code